# ComfyAI

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.py
.github/: copilot-instructions.md
desktop/tauri/src/: app.js  index.html  styles.css
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: main.rs
docs/: architecture.md  ports.md
prompt_layer/: __init__.py  ai_assistant.py  cli.py  graph_schema.py  linux_workstation.py  planner_client.py  planner_ui.py  ports.py  prompt_to_graph.py  setup_config.py  setup_runtime.py  setup_status.py  setup_status_server.py
prompt_layer/planner/: __init__.py  config.py  prompts.py  runtime.py  validation.py
prompt_layer/templates/: controlnet_depth_upscale.json  img2img_lora.json  sdxl_base_refiner.json
requirements/: comfyhybrid_requirements.json
scripts/: comfyhybrid_setup_flow.py  launch_comfyui.py  linux_bootstrap_comfyhybrid.sh  linux_verify_comfyhybrid.sh  open_in_comfyui.py  run_workflow.py  smoke_comfyhybrid_planner_windows.ps1  validate_graph.py  windows_bootstrap_comfyhybrid.ps1  windows_verify_comfyhybrid.ps1
tests/: out_graph_llm.json  test_integration.py  test_local_planner.py  test_overrides.py  test_planner_bridge.py  test_ports.py  test_prompt_parser.py  test_setup_acquire_verify.py  test_setup_status.py
